<resources>
    <string name="app_name">YetAnotherVideoPlayer</string>
    <string name="app_open_with">Play with YAVP</string>

    <!-- Content Descriptions -->
    <string name="pb_controls_screen_auto">Automatically Rotate Screen</string>
    <string name="pb_controls_screen_lock_portrait">Lock Screen to Portrait</string>
    <string name="pb_controls_screen_lock_landscape">Lock Screen to Landscape</string>
    <string name="pb_controls_player_quick_settings">Open Quick Settings</string>

    <!-- PIP Action Titles -->
    <string name="pip_title_play">Play</string>
    <string name="pip_title_pause">Pause</string>
    <string name="pip_title_replay">Replay</string>
    <string name="pip_title_f_rewind">Rewind</string>
    <string name="pip_title_f_forward">Fast- Forward</string>

    <!-- Info Texts in PlaybackActivity -->
    <string name="info_volume_change">Volume: %d%%</string><!-- 1st arg: volume% [0-100] -->
    <string name="info_brightness_change">Brightness: %s</string><!-- 1st arg: brightness% ["1%"-"100%" + "@strings\info_brightness_auto"] -->
    <string name="info_brightness_auto">AUTO</string>
    <string name="info_battery_low">Low Battery</string>

    <!-- info dialog: format not supported -->
    <string name="dialog_format_not_supported_title">Format not Supported!</string>
    <string name="dialog_format_not_supported_message">Sorry, but it seems as if the File Format \"%s\" is currently not supported.\nIf you think this may be a bug, please open a Issue.</string>
    <string name="dialog_format_not_supported_btn_issue">Open Issue</string>
    <string name="dialog_format_not_supported_btn_exit">Not a bug, Exit</string>

    <!-- info dialog: player error -->
    <string name="dialog_player_error_title">A Player Error has occurred!</string>
    <string name="dialog_player_error_btn_exit">Exit now</string>

    <!-- Quick Settings -->
    <string name="qs_quality">Quality</string>
    <string name="qs_jump_to">Jump to</string>
    <string name="qs_picture_in_picture">PIP- Player</string>
    <string name="qs_cast">Cast</string>
    <string name="qs_repeat">Loop</string>
    <string name="qs_closed_captions">Subtitles</string>
    <string name="qs_app_settings">Global Settings</string>
    <string name="qs_skip_intro">Skip Opening</string>

    <string name="qs_anime4k">Anime4K</string>
    <!--<string name="qs_anime4k_x1">Anime4K (x1)</string>-->
    <!--<string name="qs_anime4k_x2">Anime4K (x2)</string>-->

    <!-- Toast Strings -->
    <string name="toast_no_storage_permissions_granted">No Storage Permissions granted! Permissions are required to play local files.</string>
    <string name="toast_invalid_playback_uri">Invalid Playback URI!</string>
    <string name="toast_press_back_again_to_exit">Press Back again to exit</string>

    <!-- Seek Duration Labels in the DoubleTapSeekOverlay -->
    <string name="dtso_seek_duration_label_f">%d Seconds</string>

    <!-- urls to yavp pages -->
    <string name="yavp_github_url">https://github.com/shadow578/YetAnotherVideoPlayer</string>
    <string name="yavp_new_issue_url">https://github.com/shadow578/YetAnotherVideoPlayer/issues</string>

    <!-- Settings -->
    <string name="settings_root_title">Settings</string>

    <!-- Settings: general -->
    <string name="settings_general_title">General</string>
    <string name="settings_general_confirm_exit_title">Prevent Accidental Closing</string>
    <string name="settings_general_confirm_exit_off">Back button closes app without confirmation</string>
    <string name="settings_general_confirm_exit_on">Back button hast to be pressed twice to exit</string>
    <string name="settings_general_confirm_exit_timeout_title">Double Press Timeout</string>
    <string name="settings_general_confirm_exit_timeout_summary">How fast you have to press the Back button to exit (milliseconds)</string>
    <string name="settings_general_persist_volume_title">Persistent Volume</string>
    <string name="settings_general_persist_volume_off">Volume is not saved between Playback Sessions</string>
    <string name="settings_general_persist_volume_on">Volume is saved between Playback Sessions</string>
    <string name="settings_general_persist_brightness_title">Persistent Brightness</string>
    <string name="settings_general_persist_brightness_off">Brightness is not saved between Playback Sessions</string>
    <string name="settings_general_persist_brightness_on">Brightness is saved between Playback Sessions</string>
    <string name="settings_general_battery_warn_title">Low Battery Warning</string>
    <string name="settings_general_battery_warn_off">You will not be warned when Battery charge is low</string>
    <string name="settings_general_battery_warn_on">You will receive a warning when Battery charge is low</string>
    <string name="settings_general_battery_warn_thresh_title">Battery low Threshold</string>
    <string name="settings_general_battery_warn_thresh_summary">Threshold below which the battery warning is shown</string>

    <!-- Settings: swipe -->
    <string name="settings_swipe_title">Gestures</string>
    <string name="settings_swipe_enable_title">Enable Swipe Gestures</string>
    <string name="settings_swipe_enable_off">Swipe Gestures are disabled</string>
    <string name="settings_swipe_enable_on">Volume &amp; Brightness can be adjusted by swiping</string>
    <string name="settings_swipe_brightness_step_title">Brightness Step Size</string>
    <string name="settings_swipe_brightness_step_summary">By how many Percent the Brightness is adjusted per step</string>
    <string name="settings_swipe_hard_swipe_enable_title">Hard- Swipe for Auto Brightness</string>
    <string name="settings_swipe_hard_swipe_enable_off">Auto- Brightness can be selected with normal swipe</string>
    <string name="settings_swipe_hard_swipe_enable_on">You have to Hard- Swipe to select the Auto- Brightness</string>
    <string name="settings_swipe_hard_swipe_thresh_title">Hard- Swipe Threshold</string>
    <string name="settings_swipe_hard_swipe_thresh_summary">How many pixels long a Swipe hast to be to be counted as a Hard- Swipe</string>
    <string name="settings_swipe_info_duration_title">Info Text Duration</string>
    <string name="settings_swipe_info_duration_summary">How many milliseconds the Info Text (Brightness &amp; Volume) stays visible</string>

    <!-- Settings: swipe - advanced -->
    <string name="settings_swipe_adv_title">Gesture Controls - Advanced</string>
    <string name="settings_swipe_adv_touch_decay_title">Touch Decay Time</string>
    <string name="settings_swipe_adv_touch_decay_summary">How many milliseconds a touch stays valid without movement</string>
    <string name="settings_swipe_adv_swipe_thresh_title">Swipe Threshold</string>
    <string name="settings_swipe_adv_swipe_thresh_summary">How many Pixels long a swipe hast to be to be detected as a Swipe</string>
    <string name="settings_swipe_adv_doubletap_decay_title">Double- Tap Decay Time</string>
    <string name="settings_swipe_adv_doubletap_decay_summary">How many milliseconds a touch stays valid for a double- tap</string>
    <string name="settings_swipe_adv_doubletap_radius_title">Double- Tap Radius</string>
    <string name="settings_swipe_adv_doubletap_radius_summary">How far apart two taps are allowed to be for a double- tap</string>
    <string name="settings_swipe_adv_cat_dead_zone">Swipe Dead- Zone</string>
    <string name="settings_swipe_adv_dead_zone_t_title">Ignored Pixels (Top)</string>
    <string name="settings_swipe_adv_dead_zone_b_title">Ignored Pixels (Bottom)</string>
    <string name="settings_swipe_adv_dead_zone_l_title">Ignored Pixels (Left)</string>
    <string name="settings_swipe_adv_dead_zone_r_title">Ignored Pixels (Right)</string>
    <string name="settings_swipe_adv_dead_zone_summary">How many Pixels are ignored for Swipes at this Edge of the Screen</string>

    <!-- Settings: player config -->
    <string name="settings_player_title">Player Settings</string>
    <string name="settings_player_auto_play_title">Auto- Start Playback</string>
    <string name="settings_player_auto_play_off">Playback has to be manually started</string>
    <string name="settings_player_auto_play_on">Playback start automatically</string>
    <string name="settings_player_auto_close_title">Auto- Close Player</string>
    <string name="settings_player_auto_close_off">Player stays open after Playback ended</string>
    <string name="settings_player_auto_close_on">Player automatically closes after Playback ended</string>
    <string name="settings_player_auto_pip_title">Auto- Enter PiP</string>
    <string name="settings_player_auto_pip_off">Pause Playback when minimizing App</string>
    <string name="settings_player_auto_pip_on">Enter Picture- in- Picture when minimizing App</string>
    <string name="settings_player_seek_increment_title">Seek Increment</string>
    <string name="settings_player_seek_increment_summary">By how many milliseconds the Seek buttons adjust the playback position</string>

    <!-- Settings: Anime4K -->
    <string name="settings_a4k_title">Anime4K Settings</string>
    <string name="settings_a4k_enable_fps_limit_title">Anime4K FPS Limit</string>
    <string name="settings_a4k_enable_fps_limit_on">Playback FPS are not limited when Anime4K is active</string>
    <string name="settings_a4k_enable_fps_limit_off">Playback FPS will be limited when Anime4K is active</string>
    <string name="settings_a4k_fps_limit_title">Anime4K FPS Limit</string>
    <string name="settings_a4k_fps_limit_summary">At how many FPS videos will render when Anime4K is active</string>
    <string name="settings_a4k_why_limit_fps_title">Why limit FPS?</string>
    <string name="settings_a4k_why_limit_fps_summary">Although Anime4K requires comparatively little processing power, it can easily overload a smartphone GPU, especially at higher resolutions. \nLimiting the FPS reduces the load on the GPU and helps to conserve the battery (at least somewhat).</string>

    <!-- Settings: about -->
    <string name="settings_about_title">About YAVP</string>
    <string name="settings_about_yavp">YAVP by shadow578</string>
    <!-- 1st. arg (%s)= Version String, 2nd. arg (%d)= Version number-->
    <string name="settings_about_version_f">Version %s (%d)</string>

    <!-- Settings: about - library -->
    <string name="settings_about_libs_title">Used Library</string>
    <string name="settings_about_libs_exoplayer_title">google/ExoPlayer</string>
    <string name="settings_about_libs_exoplayer_url">https://github.com/google/ExoPlayer</string>
    <string name="settings_about_libs_mat_icons_title">google/Material-Design-Icons</string>
    <string name="settings_about_libs_mat_icons_url">https://github.com/google/material-design-icons</string>
    <string name="settings_about_libs_mat_progress_title">pnikosis/Materialish-Progress</string>
    <string name="settings_about_libs_mat_progress_url">https://github.com/pnikosis/materialish-progress</string>
    <string name="settings_about_libs_time_dur_pick_title">svenwiegand/Time-Duration-Picker</string>
    <string name="settings_about_libs_time_dur_pick_url">https://github.com/svenwiegand/time-duration-picker</string>
    <string name="settings_about_libs_exofilter_title">MasayukiSuda/ExoPlayerFilter</string>
    <string name="settings_about_libs_exofilter_url">https://github.com/MasayukiSuda/ExoPlayerFilter</string>
    <string name="settings_about_libs_anime4k_title">bloc97/Anime4K</string>
    <string name="settings_about_libs_anime4k_url">https://github.com/bloc97/Anime4K/</string>


    <!-- Crash Activity -->
    <string name="crash_ac_text_error">An unexpected error occurred and the app had to be closed. \nSorry for the inconvenience.</string>
    <string name="crash_ac_resume_playback">Try to resume playback</string>
    <string name="crash_ac_exit_app">Close App</string>
</resources>
