<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:fragment="de.shadow578.yetanothervideoplayer.ui.AppSettingsActivity$PreferencesGeneralFragment"
        android:icon="@drawable/ic_settings_48px"
        android:title="@string/settings_general_title" />

    <Preference
        android:fragment="de.shadow578.yetanothervideoplayer.ui.AppSettingsActivity$PreferencesSwipeFragment"
        android:icon="@drawable/ic_touch_app_48px"
        android:title="@string/settings_swipe_title" />

    <Preference
        android:fragment="de.shadow578.yetanothervideoplayer.ui.AppSettingsActivity$PreferencesPlayerConfigFragment"
        android:icon="@drawable/ic_play_arrow_48px"
        android:title="@string/settings_player_title" />

    <Preference
        android:fragment="de.shadow578.yetanothervideoplayer.ui.AppSettingsActivity$PreferencesAnime4KConfigFragment"
        android:icon="@drawable/ic_a4k_black"
        android:title="@string/settings_a4k_title" />

    <Preference
        android:fragment="de.shadow578.yetanothervideoplayer.ui.AppSettingsActivity$PreferencesAboutFragment"
        android:icon="@drawable/ic_info_outline_48px"
        android:title="@string/settings_about_title" />
</PreferenceScreen>
