<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_placeholder_48px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/crash_ac_text_error"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/crashac_btn_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="crashac_OnClick"
            android:text="@string/crash_ac_resume_playback" />

        <Button
            android:id="@+id/crashac_btn_close_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="crashac_OnClick"
            android:text="@string/crash_ac_exit_app" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/crashac_txt_crash_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CRASH_DETAILS"
                tools:ignore="HardcodedText" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>